Сверстан блок PROMO

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,5 +1,6 @@
 $babackground-color: #f2f3f4;
-$main-font: 'Raleway', sans-serif;
-$title-font: 'Montserrat', sans-serif;
+$main-font: 'Montserrat', sans-serif;
+$title-font: 'Vollkorn', serif;
 $main-color: #686461;
 $title-color: #2e3034;
+$decor-color: #2e3034;
