--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,4 +4,7 @@
 @import 'mixins.scss';
 @import 'general.scss';
 
+@import 'blocks/title.scss';
+
+@import 'blocks/promo.scss';
 @import 'media.scss';
