--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,4 +7,6 @@
 @import 'blocks/title.scss';
 
 @import 'blocks/promo.scss';
+@import 'blocks/portfolio.scss';
+@import 'blocks/series.scss';
 @import 'media.scss';
