Сверстан блок PUBLICATIONS

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,4 +9,5 @@
 @import 'blocks/promo.scss';
 @import 'blocks/portfolio.scss';
 @import 'blocks/series.scss';
+@import 'blocks/publications.scss';
 @import 'media.scss';
