--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,4 +10,5 @@
 @import 'blocks/portfolio.scss';
 @import 'blocks/series.scss';
 @import 'blocks/publications.scss';
+@import 'blocks/up-button.scss';
 @import 'media.scss';
