--- a/app/scss/blocks/_up-button.scss
+++ b/app/scss/blocks/_up-button.scss
@@ -1,4 +1,5 @@
 .up-button {
+  display: none;
   position: fixed;
   right: 75px;
   bottom: 75px;
@@ -16,6 +17,10 @@
     padding: 15px;
     rotate: (-135deg);
     transition: 0.5s;
+  }
+
+  &--visible {
+    display: block;
   }
 }
 
