Имплементация плавного всплывания секций

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,4 +11,5 @@
 @import 'blocks/series.scss';
 @import 'blocks/publications.scss';
 @import 'blocks/up-button.scss';
+@import 'blocks/appearing-section.scss';
 @import 'media.scss';
