--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,6 +8,7 @@
 
 @import 'blocks/promo.scss';
 @import 'blocks/portfolio.scss';
+@import 'blocks/slider.scss';
 @import 'blocks/series.scss';
 @import 'blocks/publications.scss';
 @import 'blocks/up-button.scss';
