Улучшено отображение слайдов. Добавлены форматы .avif и .webp

--- a/app/scss/_general.scss
+++ b/app/scss/_general.scss
@@ -17,7 +17,7 @@ body {
   font-family: $main-font;
   font-weight: 400;
   overflow-x: hidden;
-  background-color: $babackground-color;
+  background-color: $background-color;
   color: $main-color;
 }
 
