--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,4 +1,4 @@
-$babackground-color: #f2f3f4;
+$background-color: #f2f3f4;
 $main-font: 'Montserrat', sans-serif;
 $title-font: 'Vollkorn', serif;
 $main-color: #686461;
